@@ -1033,7 +1033,7 @@ procedure TForm1.DrawFrame();
 var
   AFN: Integer;
   Rind: TDecimateInfo;
-  Counter, C2: Integer;
+  Counter, C2, C3: Integer;
   FromFrame: Integer;
   Sif: TSectionInfo;
   DecimateCurrent, PostCurrent: Boolean;
@@ -1151,8 +1151,14 @@ begin
         with Form2.CustomRangeLists.Items.Objects[counter] as TCustomList do
           for c2 := 0 to Count - 1 do
             with Items[c2] as TCustomRange do
-              if (startframe <= TrackBar1.Position) and (endframe >= TrackBar1.Position) then
-                FInfoText.Append('CL: ' + name);
+              begin
+                if endframe < 0 then
+                  for c3 := 0 downto endframe + 1 do
+                    if (startframe - c3) = TrackBar1.Position then
+                      FInfoText.Append('CL: ' + name);
+                if (startframe <= TrackBar1.Position) and (endframe >= TrackBar1.Position) then
+                  FInfoText.Append('CL: ' + name);
+              end;
 
     for Counter := 0 to FInfoText.Count - 1 do
       FTextLayer.Bitmap.Canvas.TextOut(MulDiv(15, FOriginalWidth, 720), MulDiv(40 + counter * 15, FOriginalWidth, 720), FInfoText[counter]);
@@ -2606,7 +2612,7 @@ begin
     begin
       if (Form2.SelectedCustomList <> nil) and FRangeOn then
       begin
-        if Form11.SwapCustomList.Checked and (FRange > TrackBar1.Position) then
+        if (FRange > TrackBar1.Position) then
           Form2.SelectedCustomList.Add(TCustomRange.Create(TrackBar1.Position, FRange))
         else
           Form2.SelectedCustomList.Add(TCustomRange.Create(FRange, TrackBar1.Position));
@@ -2614,7 +2620,34 @@ begin
         Form2.CustomRanges.Count := Form2.SelectedCustomList.Count;
         Form2.SelectedCustomList.Sort(CustomListSort);
         FRangeOn := False;
-        FInfoText.Append('Added range; Start: ' + IntToStr(FRange) + '; End: ' + inttostr(TrackBar1.Position));
+        if Form11.SwapCustomList.Checked and (FRange > TrackBar1.Position) then
+          FInfoText.Append('Added range; Start: ' + IntToStr(TrackBar1.Position) + '; End: ' + inttostr(FRange))
+        else
+          FInfoText.Append('Added range; Start: ' + IntToStr(FRange) + '; End: ' + inttostr(TrackBar1.Position));
+      end
+      else if (Form2.SelectedCustomList <> nil) then
+        Button8Click(nil)
+      else
+        FInfoText.Append('No list selected');
+
+      DrawFrame;
+    end
+    else if IsKeyEvent(kMarkCustomListNum, msg.CharCode) then
+    begin
+      if (Form2.SelectedCustomList <> nil) and FRangeOn then
+      begin
+        if Form11.SwapCustomList.Checked and (FRange > TrackBar1.Position) then
+          Form2.SelectedCustomList.Add(TCustomRange.Create(TrackBar1.Position, TrackBar1.Position - Frange - 1))
+        else
+          Form2.SelectedCustomList.Add(TCustomRange.Create(FRange, FRange - TrackBar1.Position - 1));
+
+        Form2.CustomRanges.Count := Form2.SelectedCustomList.Count;
+        Form2.SelectedCustomList.Sort(CustomListSort);
+        FRangeOn := False;
+        if TrackBar1.Position < FRange then
+          FInfoText.Append('Added range; Start: ' + IntToStr(TrackBar1.Position) + '; Frame Number: ' + IntToStr(-(TrackBar1.Position - FRange - 1)))
+        else
+          FInfoText.Append('Added range; Start: ' + IntToStr(FRange) + '; Frame Number: ' + IntToStr(-(FRange - TrackBar1.Position - 1)));
       end
       else if (Form2.SelectedCustomList <> nil) then
         Button8Click(nil)
